# MQH

./: CMakeLists.txt  README.md  main.cpp  mqh.cpp  run_example.sh
data/Deep100M/: Deep100M.gt  Deep100M.q
data/Deep10M/: Deep10M.gt  Deep10M.q
